# Py-EDScorbotTool

./: .gitignore  README-old.md  README.md  SMALL_Inverse_kinematics.ipynb  SMALL_Inverse_kinematics.py  angle_bounds.py  change.txt  converted.json  demo.py  infinite.py  initial_config.json  main.py  ocho_x.npy  ocho_y.npy  pid_constants.py  plot_xyz.py  pyAER.py  ref_per_angle_estimation.py  requirements.txt  scorbot_tutorial.md  setup.cfg  sweep.py  t1.json  test_write_npy.npy  trajectory.py
bash/: Configure.bash  SendRefJoint.bash  readJoint.bash  readJoints.bash  readJoints_inf.bash
c/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  EDScorbot.cpp  Makefile  cmake_install.cmake  mosquitto_build.sh  send_data.c  toolchain.cmake
c/compiled_libs_armhf/: libmosquitto.so.1
c/include/: EDScorbot.hpp
c/src/: EDScorbot.cpp  client.py  client_file.py  converted.json  devmem.cpp  mqtt_client.c  read_joints.cpp  receive_server.cpp  reset_all.cpp  send_data.c  server.cpp  target1.npy  test.cpp  test_3_points.npy  test_home.cpp  test_joints.cpp  test_json.cpp  trajectory.cpp  transformations_test.py
c/src/EDScorbot/: EDScorbot.cpp  devmem.cpp
c/src/impl/: server-impls.cpp
c/src/include/: EDScorbot.hpp  devmem.hpp  server-defs.hpp
c/src/mqqt_server/: CMakeLists.txt  mqtt_server.cpp
c/src/mqtt_server/: CMakeLists.txt  Makefile  cmake_install.cmake  mocked_server.cpp  mqtt_server.cpp
c/src/python_utils/: ejez0.3-0.6.npy  pad_trajectory.py
c/src/python_utils/trajectory_generation/: xyz_to_angles.py
c/src/python_utils/transformations/: 6_dims_converted.json  angles_to_json.py  angles_to_refs.py  angles_to_xyz.py  cont_to_xyz.py  count_to_angle.py  npy_to_json.py  pad_trajectory.py  refs_out.npy  refs_to_angles.py
c/src/python_utils/visualization/: angles.py  counters.py  xyz.py
c/src/scripts/: home.cpp  read_joints.cpp  reset_all.cpp  sendRefJx.cpp  send_0.cpp
c/src/test_scripts/: devmem_test.c  mqtt_client.c  mqtt_client.cpp  mqtt_parser_json.cpp  test_argparse.cpp  test_arrays.cpp  test_json.cpp  test_json_objects.cpp  test_pthread.c  test_putenv.cpp
c/src/trajectory/: CMakeLists.txt  Makefile  cmake_install.cmake  trajectory.cpp  utils.cpp  utils.h
docs/: api.rst  capi.rst  conf.py  contents.rst  dataset.rst  index.rst  introduction.rst  pyapi.rst
docs/doxy/: Doxyfile
examples/: demo.py  sweep.py
l2l/: DirecKinScorbot.py  automatization_overview.txt  execute_trajectory.py  stfp_exec.bash  test_output.p  transformations.py
mqtt/: client_comm.py  client_traj.py  mosquitto.conf
pyEDScorbotTool/: __init__.py  execute_trajectory.py  initial_config.json  main.py  output_data.npy  output_data_xyz.npy  probe_ang_velocities_6dims.json  pyAER.py  sftp_exec.bash  target_ang_velocities_3minus_k_lin_6dims.json  test_xyz.npy  visualization.py
pyEDScorbotTool/20230116_target_trajectories/: probe_out_cont.npy  probe_xyz.npy  target_ang_velocities_3minus_k_lin.npy  target_angs_3minus_k_lin.npy  target_angs_3minus_k_lin_6dims.json
pyEDScorbotTool/test_0kg_2023_01_11_09_29_30/: probe_ang_velocities.npy  probe_out_cont.npy  probe_xyz.npy
pyEDScorbotTool/utils/: __init__.py
pyEDScorbotTool/utils/trajectory_generation/: xyz_to_angles.py
pyEDScorbotTool/utils/transformations/: angles_to_json.bash  angles_to_json.py  angles_to_refs.py  angles_to_xyz.py  cont_to_xyz.py  count_to_angle.py  lemn_articulo.npy  pad_trajectory.py  refs_to_angles.py
pyEDScorbotTool/utils/visualization/: refs.py  xyz.py
pyEDScorbotTool/utils/visualization/data/: linea_eje_z.npy  out_cont
python/: main.py  pyAER.py
python/utils/trajectory_generation/: xyz_to_angles.py
python/utils/transformations/: angles_to_json.py  angles_to_refs.py  angles_to_xyz.py  cont_to_xyz.py  count_to_angle.py  json_to_npy.py  omegas_to_angles.py  refs_to_angles.py
python/utils/visualization/: counters.py
