[metadata]
name = pyEDScorbotTool
version = 0.0.1

[options]
packages = pyEDScorbotTool

[options.entry_points]
console_scripts =
    cont_to_xyz = pyEDScorbotTool.utils.transformations.cont_to_xyz:cont_to_xyz_cli
    launch_scorbot_gui = pyEDScorbotTool.main:launch_gui
   # another-application = mypackage.mymodule:another_function