[metadata]
name = pyEDScorbotTool
version = 0.0.1

[options]
packages = pyEDScorbotTool

[options.entry_points]
console_scripts =
    cont_to_xyz = pyEDScorbotTool.utils.transformations.cont_to_xyz:main
    launch_scorbot_gui = pyEDScorbotTool.main:launch_gui
    angles_to_json = pyEDScorbotTool.utils.transformations.angles_to_json:main
    send_trajectory = pyEDScorbotTool.pyAER:send_trajectory_cli
    plot_3d_trajectory = pyEDScorbotTool.utils.visualization.xyz:main
    process_dataset_dir = pyEDScorbotTool.pyAER:process_dataset_dir
   # another-application = mypackage.mymodule:another_function